force-app/main/default/objects/APIMonitoring__c/APIMonitoring__c.object-meta.xml
<CustomObject>
    <description>Object used to track all API Calls from and to Salesforce</description>
    <label>API Monitoring</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>APIMonitoring Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Monitorings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>