force-app/main/default/objects/APIMonitoring__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <description>Destination of the API Call</description>
    <label>Destination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>API_Source_Destination</valueSetName>
    </valueSet>
</CustomField>