force-app/main/default/objects/APIMonitoring__c/fields/EntrantSortant__c.field-meta.xml
<CustomField>
    <fullName>EntrantSortant__c</fullName>
    <label>Entrant/Sortant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entrant</fullName>
            </value>
            <value>
                <fullName>Sortant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>