force-app/main/default/objects/APIMonitoring__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <description>Error Message from the API Response if there is any</description>
    <label>Error Message</label>
    <type>TextArea</type>
</CustomField>