force-app/main/default/objects/APIMonitoring__c/fields/RequestBody__c.field-meta.xml
<CustomField>
    <fullName>RequestBody__c</fullName>
    <description>Resquest Body of the API Call</description>
    <label>Request Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>