force-app/main/default/objects/APIMonitoring__c/fields/ResponseBody__c.field-meta.xml
<CustomField>
    <fullName>ResponseBody__c</fullName>
    <description>Response Body of the API Call</description>
    <label>Response Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>