force-app/main/default/objects/APIMonitoring__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Source of the API Call</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>API_Source_Destination</valueSetName>
    </valueSet>
</CustomField>