force-app/main/default/objects/APIMonitoring__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the API Response</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>KO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>