force-app/main/default/objects/APIMonitoring__c/fields/StatusCode__c.field-meta.xml
<CustomField>
    <fullName>StatusCode__c</fullName>
    <description>Status Code of the API Response</description>
    <label>Status Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>